compute.tf

resource "aws_instance" "instance_1" {
  ami             = var.ami # eu-west-1
  instance_type   = var.instance_type
  security_groups = [aws_security_group.instances_sg.name]
  user_data       = <<-EOF
              #!/bin/bash
              echo "Hello, World 1" > index.html
              python3 -m http.server 8080 &
              EOF

}

resource "aws_instance" "instance_2" {
  ami             = var.ami # eu-west-1
  instance_type   = var.instance_type
  security_groups = [aws_security_group.instances_sg.name]
  user_data       = <<-EOF
              #!/bin/bash
              echo "Hello, World 1" > index.html
              python3 -m http.server 8080 &
              EOF

}
